# Uday-Independent-Study-Prv

./: .env.example  .gitignore  .pre-commit-config.yaml  CITATION.cff  CLEANUP_SUMMARY.md  DEMO.md  DEMO_CHECKLIST.md  DOCKER_TROUBLESHOOTING.md  Dockerfile  FINAL_TEST_RESULTS.md  HARDENING_CHECKLIST.md  Makefile  QUICKSTART.md  README 2.md  README.md  REPRODUCTION_COMMANDS.md  REPRODUCTION_GUIDE.md  SECURITY.md  docker-compose.yml  project_report.tex  pyproject.toml  reproduce.sh  research_summary.md  soc_pilot_proposal.md
.github/workflows/: ci.yml
configs/: benchmark.yaml  detector.yaml  sentinel_rl.yaml
configs/suricata/: suricata.yaml
configs/zeek/: local.zeek
data/raw/: .gitkeep
docs/: DATA_PLAN.md  PROJECT_BRIEF.md  PROJECT_CHARTER.md  SOC_ASK_OFFER_MEMO.md  audit_report.md
hpc/: slurm_anchor.sbatch  slurm_ingest.sbatch  slurm_train.sbatch
scripts/: README.md  download_benchmark_pcaps.sh  download_lanl.sh  download_sample_pcap.sh  download_tiny_pcap.sh  evaluate.py  generate_synthetic_pcaps.py  ingest_lanl.py  pcap_healthcheck.sh  preflight.sh  run_ablation.py  run_benchmark.py  run_eval.py  run_with_docker.sh  tune_detectors.py  validate_pcap.py  validate_telemetry.sh  verify_run.sh
src/: __init__.py  api.py  config.py  main.py
src/agents/: __init__.py  critic_agent.py  evidence_agent.py  orchestrator.py  report_agent.py  triage_agent.py
src/detect_baseline/: __init__.py  detector.py
src/eval/: __init__.py  diagnosis.py  evaluator.py  metrics.py  plots.py
src/features/: __init__.py
src/ingest/: __init__.py  alert_engine.py  lanl_loader.py  live_ingestion.py  suricata_parser.py  (+1 more)
tests/: __init__.py  conftest.py  test_alert_engine.py  test_api.py  test_critic_agent.py  test_detector.py  test_encoder.py  test_eval_metrics.py  test_lanl_loader.py  test_model.py  test_normalizer.py  test_pcap_healthcheck.py  test_soc_metrics.py  test_suricata_parser.py  test_zeek_parser.py
(+11 files in other folders)
